@@ -1,3 +1,6 @@
+/* { dg-do run } */
+/* { dg-xfail-run-if "" { "*-*-*" } { "-O2" "-O3" "-Os" } } */
+
 struct PMC {
     unsigned flags;
 };
