@@ -1,3 +1,11 @@
+2011-09-06  Martin Jambor  <mjambor@suse.cz>
+
+	Revert
+	2011-09-02  Martin Jambor  <mjambor@suse.cz>
+        PR middle-end/49886
+        * ipa-split.c (split_function): Do not skip any arguments if
+        can_change_signature is set or there are function type attributes.
+
 2011-09-05  Georg-Johann Lay  <avr@gjlay.de>
 
 	PR target/50289
